--- a/src/app/components/devices/master/devices-master.html
+++ b/src/app/components/devices/master/devices-master.html
@@ -20,16 +20,12 @@
   SOFTWARE.
 -->
 
-<header>
-  <h1>Room/Tag</h1>
-</header>
 
-<nav>
-  <ul>
-    <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
-    <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
-    <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li>
-  </ul>
-</nav>
-
-<div ui-view id="content"></div>
+<ul class="tiles">
+  <li class="item" ng-repeat="device in devices.configured | orderBy: 'name' track by $index">
+    <a ui-sref="guh.devices.detail({ deviceId: device.id })">
+      <h2 class="name hero" hero-id="name">{{ device.name }}</h2>
+      <p>{{ device.deviceClass.vendor.name }}, {{ device.deviceClass.name }}</p>
+    </a>
+  </li>
+</ul>
