Fixed bug with missing jshint config during build. Added basic styles.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -36,7 +36,9 @@
  *
  */
 
-
+@import "../assets/scss/functions";
+@import "../assets/scss/mixins";
+@import "../assets/scss/variables";
 
 
 /*
@@ -44,14 +46,14 @@
  *
  */
 
-
+@import "../assets/scss/components/tiles";
 
 
 /*
  * Directives (Shared UI)
  */
 
-
+@import "../app/shared/ui/tabs/tabs";
 
 
 /*
@@ -60,3 +62,5 @@
  */
 
 @import "../assets/scss/app/reset";
+@import "../assets/scss/app/base";
+@import "../assets/scss/app/layout";
