--- a/src/assets/scss/_functions.scss
+++ b/src/assets/scss/_functions.scss
@@ -23,35 +23,12 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tabset {
-  @include rem(margin, 2.4, 0);
-  @include rem(padding, 0, 2.4);
+/*
+ * Helper function for px-fallback
+ * http://designbyjoel.com/blog/2013-02-28-sass-rems/
+ *
+ */
 
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
-  }
-
-  li {
-    @include flex(1);
-    @include flex-grow(1);
-  }
-
-  a {
-    background-color: #eee;
-    color: #000;
-    display: block;
-    @include rem(padding, 0.9, 1.8);
-    text-align: center;
-    text-decoration: none;
-
-    &.active {
-      background-color: #ddd;
-    }
-  }
-}
-
-.tab {
-  background-color: #ddd;
-  @include rem(padding, 1.8);
+@function strip-unit($num) {
+  @return $num / ($num * 0 + 1);
 }
