--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -22,36 +22,35 @@
  *                                                                                     *
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
+/*
+ * px-fallback for browsers that don't support rem-values
+ * http://designbyjoel.com/blog/2013-02-28-sass-rems/
+ *
+ */
 
-.tabset {
-  @include rem(margin, 2.4, 0);
-  @include rem(padding, 0, 2.4);
+@mixin rem($property, $values...) {
+  $max: length($values);
+  $pxValues: '';
+  $remValues: '';
 
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
-  }
+  @for $i from 1 through $max {
+    $value: strip-unit(nth($values, $i));
+    $pxValues: #{$pxValues + $value*10}px;
 
-  li {
-    @include flex(1);
-    @include flex-grow(1);
-  }
-
-  a {
-    background-color: #eee;
-    color: #000;
-    display: block;
-    @include rem(padding, 0.9, 1.8);
-    text-align: center;
-    text-decoration: none;
-
-    &.active {
-      background-color: #ddd;
+    @if $i < $max {
+      $pxValues: #{$pxValues + " "};
     }
-  }
-}
+  } 
 
-.tab {
-  background-color: #ddd;
-  @include rem(padding, 1.8);
+  @for $i from 1 through $max {
+    $value: strip-unit(nth($values, $i));
+    $remValues: #{$remValues + $value}rem;
+
+    @if $i < $max {
+      $remValues: #{$remValues + " "};
+    }
+  } 
+   
+  #{$property}: $pxValues; 
+  #{$property}: $remValues; 
 }
