--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -23,35 +23,12 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tabset {
-  @include rem(margin, 2.4, 0);
-  @include rem(padding, 0, 2.4);
+/*
+ * Type
+ *
+ */
 
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
-  }
-
-  li {
-    @include flex(1);
-    @include flex-grow(1);
-  }
-
-  a {
-    background-color: #eee;
-    color: #000;
-    display: block;
-    @include rem(padding, 0.9, 1.8);
-    text-align: center;
-    text-decoration: none;
-
-    &.active {
-      background-color: #ddd;
-    }
-  }
-}
-
-.tab {
-  background-color: #ddd;
-  @include rem(padding, 1.8);
-}
+// Font: Ubuntu
+@include font-face('Ubuntu Light', '/assets/fonts/Ubuntu/Ubuntu-Light', 300, normal);
+@include font-face('Ubuntu', '/assets/fonts/Ubuntu/Ubuntu-Regular', 400, normal);
+@include font-face('Ubuntu Bold', '/assets/fonts/Ubuntu/Ubuntu-Bold', 700, normal);
