--- a/src/assets/scss/app/_layout.scss
+++ b/src/assets/scss/app/_layout.scss
@@ -23,35 +23,65 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tabset {
-  @include rem(margin, 2.4, 0);
-  @include rem(padding, 0, 2.4);
+#main {
+  margin: 0 auto;
+}
 
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
+header {
+  float: left;
+  width: 49%;
+
+  h1 {
+    @include rem(font-size, 1.6);
+    @include rem(line-height, 2.4);
+    @include rem(padding, 0, 2.4);
+    text-align: left;
   }
+}
+
+nav {
+  float: right;
+  text-align: right;
+  width: 49%;
 
   li {
-    @include flex(1);
-    @include flex-grow(1);
+    display: inline-block;
   }
 
   a {
-    background-color: #eee;
     color: #000;
     display: block;
-    @include rem(padding, 0.9, 1.8);
-    text-align: center;
+    @include rem(line-height, 2.4);
+    @include rem(margin, 2.4, 0);
+    @include rem(padding, 0, 2.4);
     text-decoration: none;
 
     &.active {
-      background-color: #ddd;
+      text-decoration: underline;
     }
   }
 }
 
-.tab {
-  background-color: #ddd;
-  @include rem(padding, 1.8);
+#content {
+  clear: both;
+}
+
+#device-header {
+  @include display(flex);
+  @include justify-content(center);
+  margin-bottom: 2%;
+  width: 100%;
+
+  h2,
+  p {
+    text-align: center;
+  }
+
+  p {
+    color: #676767;
+    @include rem(font-size, 0.8);
+    letter-spacing: 0.1em;
+    padding-left: 0.1em;
+    text-transform: uppercase;
+  }
 }
