--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -24,10 +24,7 @@
 
 
 .tiles {
-  @include align-items(center);
-  @include display(flex);
-  @include flex-wrap(wrap);
-  @include justify-content(space-between);
+  overflow: auto;
   @include rem(padding, 0, 2.4);
   width: 100%;
 
@@ -56,7 +53,8 @@
 }
 
 .tiles > .item {
-  margin-bottom: 2%;
+  float: left;
+  margin: 0% 2% 2% 0;
   position: relative;
   width: 23.5%;
 
@@ -64,6 +62,10 @@
     content: "";
     display: block;
     padding-top: 100%;
+  }
+
+  &:nth-child(4n) {
+    margin-right: 0;
   }
 
   a {
