Added device add modal.

--- a/src/app/components/devices/add/pairing-templates/devices-add-setup-push-button.html
+++ b/src/app/components/devices/add/pairing-templates/devices-add-setup-push-button.html
@@ -20,13 +20,5 @@
   SOFTWARE.
 -->
 
-
-<ul class="tiles">
-  <li class="item" ng-repeat="device in devices.configured | orderBy: 'name' track by $index">
-    <!-- <a class="vendor-{{ device.deviceClass.vendor.name | kebabCase }}" ui-sref="guh.devices.detail({ deviceId: device.id })"> -->
-    <a ui-sref="guh.devices.detail({ deviceId: device.id })">
-      <h2 class="name">{{ device.name }}</h2>
-      <!-- <p>{{ device.deviceClass.vendor.name }}, {{ device.deviceClass.name }}</p> -->
-    </a>
-  </li>
-</ul>
+<p class="padding">{{ newDevice.displayMessage }}.</p>
+<button class="button button-full" ng-click="newDevice.confirmPairing()">OK</button>
