Added websockets to device details.

--- a/src/app/components/devices/detail/device-class-templates/template-not-available.html
+++ b/src/app/components/devices/detail/device-class-templates/template-not-available.html
@@ -22,22 +22,50 @@
 
 
 <!-- Device state -->
-<guh-tabset id="device-state">
+<!-- <guh-tabset id="device-state"> -->
+  <!-- Actions -->
+  <!-- <guh-tab heading="Actions">
+    <p ng-if="device.actions.length === 0">This device doesn't have any actions.</p>
+    <guh-action device-id="{{ device.id }}" action-type-id="{{ action.actionType.id }}" ng-repeat="action in device.actions | orderBy: 'name' track by $index"></guh-action>
+  </guh-tab> -->
+
   <!-- States -->
-  <guh-tab heading="States">
-    <p ng-if="device.states.length === 0">This device doesn't has any states.</p>
+  <!-- <guh-tab heading="States">
+    <p ng-if="device.states.length === 0">This device doesn't have any states.</p>
     <p ng-repeat="state in device.states | orderBy: 'name' track by $index">{{ state.stateType.name }}: {{ state.value }}</p>
-  </guh-tab>
+  </guh-tab> -->
 
   <!-- Events -->
-  <guh-tab heading="Events">
-    <p ng-if="device.deviceClass.eventTypes.length === 0">This device doesn't has any events.</p>
-    <p ng-repeat="eventType in device.deviceClass.eventTypes | orderBy: 'name' track by $index">{{ eventType.name }}</p>
+  <!-- <guh-tab heading="Events">
+    <p ng-if="device.deviceClass.eventTypes.length === 0">This device doesn't have any events.</p>
+    <p ng-repeat="eventType in service.deviceClass.eventTypes | orderBy: 'name' track by $index">{{ eventType.name }}</p>
   </guh-tab>
-</guh-tabset>
-
+</guh-tabset> -->
 
 <!-- Actions -->
-<div id="device-control">
-
+<!-- <div id="device-actions">
+  <p ng-if="device.actions.length === 0">This device doesn't have any actions.</p>
+  <guh-action device-id="{{ device.id }}" action-type-id="{{ action.actionType.id }}" ng-repeat="action in device.actions | orderBy: 'name' track by $index"></guh-action>
 </div>
+ -->
+
+<!-- States -->
+<div class="left">
+  <h2>State</h2>
+  <p ng-if="device.states.length === 0">No state available.</p>
+  <!-- <p ng-repeat="state in service.states | orderBy: 'name' track by $index">{{ state.stateType.name }}: {{ state.value }}</p> -->
+  <div ng-repeat="state in device.states track by $index" class="state">
+    <p class="value">{{ state.value }}</p>
+    <p class="name">{{ state.stateType.name }}</p>
+  </div>
+</div>
+
+<!-- Actions -->
+<div class="middle">
+  <h2>Controls</h2>
+  <p ng-if="device.actions.length === 0">No controls available.</p>
+  <guh-action device-id="{{ device.id }}" action-type-id="{{ action.actionType.id }}" ng-repeat="action in device.actions | orderBy: 'name' track by $index"></guh-action>
+</div>
+
+<!-- Events -->
+<div class="right"></div>
