--- a/src/app/components/services/detail/services-detail.html
+++ b/src/app/components/services/detail/services-detail.html
@@ -20,4 +20,17 @@
   SOFTWARE.
 -->
 
-<h1>Service</h1>
+<!-- Header -->
+<!-- <div id="device-header">
+  <div class="description">
+    <h2 class="name hero" hero-id="name">{{ service.name }}</h2>
+    <p>{{ service.deviceClass.vendor.name }}, {{ service.deviceClass.name }}</p>
+  </div>
+</div> -->
+<!-- <div>
+  <h2>{{ service.name }}</h2>
+</div> -->
+
+<ng-include src="service.templateUrl" ng-if="service.templateReady"></ng-include>
+
+<!-- <button ng-click="service.remove()">Remove</button> -->
