--- a/src/assets/scss/app/_base.scss
+++ b/src/assets/scss/app/_base.scss
@@ -24,8 +24,11 @@
 
 
 html {
+  @include background(linear-gradient($c-green,  $c-turquoise));
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   box-sizing: border-box;
-  font-size: 62.5%;
+  @include rootsize();
 }
 
 *,
@@ -35,19 +38,46 @@ html {
 }
 
 body {
+  color: get-color("foreground");
   font-family: 'Ubuntu';
-  @include rem(font-size, 1.6);
-  @include rem(line-height, 2.4);
   font-weight: 400;
+  @include rem(line-height, 1.5);
+  position: relative;
 }
 
 .grid-overlay {
   @include grid-overlay();
 }
 
-h1 {
-  @include rem(font-size, 3.2);
-  @include rem(line-height, 4.8);
-  @include rem(margin, 2.4, 0);
-  text-align: center;
+a {
+  color: get-color("foreground");
+  text-decoration: none; 
 }
+
+h2 {
+  // @include rem(font-size, 2);
+  // @include rem(line-height, 3);
+  @include rem(letter-spacing, 0.1);
+  @include rem(margin, 1, 0, 2);
+  @include rem(padding-left, 0.1);
+  text-align: center;
+  text-transform: uppercase;
+}
+
+// p,
+// a {
+//   // @include rem(font-size, 1.8);
+//   // @include rem(line-height, 2.7);
+//   @include rem(font-size, 1);
+// }
+
+// a {
+//   color: get-color("foreground");
+// }
+
+// h1 {
+//   @include rem(font-size, 3.2);
+//   @include rem(line-height, 4.8);
+//   @include rem(margin, 2.4, 0);
+//   text-align: center;
+// }
