--- a/src/assets/scss/app/_layout.scss
+++ b/src/assets/scss/app/_layout.scss
@@ -24,37 +24,170 @@
 
 
 #main {
-  margin: 0 auto;
-}
+  @include outer-container;
+  width: 100%;
 
-header {
-  float: left;
-  width: 49%;
+  @include media($breakpoint-xs) {
+    @include rem(padding, 6, 0, 4.5);
+    min-width: 320px;
+  }
 
-  h1 {
-    @include rem(font-size, 1.6);
-    @include rem(line-height, 2.4);
-    @include rem(padding, 0, 2.4);
-    text-align: left;
+  @include media($breakpoint-s) {
+    @include rem(padding, 9, 0, 0);
+  }
+
+  @include media($breakpoint-m) {
+    @include rem(padding, 9, 0, 0);
+  }
+
+  @include media($breakpoint-l) {
+    @include rem(padding, 9, 0, 0);
+  }
+
+  @include media($breakpoint-xl) {
+    @include rem(padding, 9, 0, 0);
+  }
+
+  @include media($breakpoint-xxl) {
+    @include rem(padding, 9, 0, 0);
   }
 }
 
-nav {
-  float: right;
-  text-align: right;
-  width: 49%;
+header.app {
+  // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba($c-white, 0.1);
+  @include rem(padding, 3, 1.5);
+  position: fixed;
+    left: 0;
+    top: 0;
+  z-index: 9000;
+
+  @include media($breakpoint-xs) {
+    background-color: rgba($c-green, 0.9);
+    @include rem(padding, 1.5);
+    width: 100%;
+  }
+
+  @include media($breakpoint-s) {
+    box-shadow: none;
+    @include span-columns(2);
+    @include omega();
+    left: auto;
+    right: 0;
+  }
+
+  @include media($breakpoint-m) {
+    box-shadow: none;
+    @include span-columns(4);
+    @include omega();
+    left: auto;
+    right: 0;
+  }
+
+  @include media($breakpoint-m) {
+    box-shadow: none;
+    @include span-columns(4);
+    @include omega();
+    left: auto;
+    right: 0;
+  }
+
+  @include media($breakpoint-l) {
+    box-shadow: none;
+    @include span-columns(4);
+    @include omega();
+    left: auto;
+    right: 0;
+  }
+
+  @include media($breakpoint-xl) {
+    box-shadow: none;
+    @include span-columns(4);
+    @include omega();
+    left: auto;
+    right: 0;
+  }
+
+  @include media($breakpoint-xxl) {
+    box-shadow: none;
+    @include span-columns(4);
+    @include omega();
+    left: auto;
+    // right: 0;
+    @include shift(13);
+  }
+
+  h1 {
+    float: right;
+  }
+}
+
+nav.app {
+  @include rem(padding, 1.5, 0, 1.5);
+  position: fixed;
+    left: 0;
+  width: 100%;
+  z-index: 8000;
+
+  @include media($breakpoint-xs) {
+    background-color: rgba($c-turquoise, 0.9);
+    bottom: 0;
+    // box-shadow: 0px -1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-top: 1px solid rgba($c-white, 0.1);
+    padding: 0;
+  }
+
+  @include media($breakpoint-s) {
+    background-color: rgba($c-green, 0.9);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba($c-white, 0.1);
+    border-top: none;
+    top: 0;
+  }
+
+  @include media($breakpoint-m) {
+    background-color: rgba($c-green, 0.9);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba($c-white, 0.1);
+    border-top: none;
+    top: 0;
+  }
+
+  @include media($breakpoint-l) {
+    background-color: rgba($c-green, 0.9);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba($c-white, 0.1);
+    border-top: none;
+    top: 0;
+  }
+
+  @include media($breakpoint-xl) {
+    background-color: rgba($c-green, 0.9);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba($c-white, 0.1);
+    border-top: none;
+    top: 0;
+  }
+
+  @include media($breakpoint-xxl) {
+    background-color: rgba($c-green, 0.9);
+    // box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba($c-white, 0.1);
+    border-top: none;
+    top: 0;
+
+    ul {
+      @include shift(1);
+    }
+  }
 
   li {
     display: inline-block;
   }
 
   a {
-    color: #000;
     display: block;
-    @include rem(line-height, 2.4);
-    @include rem(margin, 2.4, 0);
-    @include rem(padding, 0, 2.4);
-    text-decoration: none;
+    @include rem(padding, 1.5);
 
     &.active {
       text-decoration: underline;
@@ -62,26 +195,173 @@ nav {
   }
 }
 
-#content {
-  clear: both;
-}
+.content.app {
+  // @include media($breakpoint-m) {
+  //   clear: both;
+  //   @include fill-parent();
+  // }
 
-#device-header {
-  @include display(flex);
-  @include justify-content(center);
-  margin-bottom: 2%;
-  width: 100%;
-
-  h2,
-  p {
-    text-align: center;
+  div.left,
+  div.middle,
+  div.right {
+    @include rem(padding, 1.5);
   }
 
-  p {
-    color: #676767;
-    @include rem(font-size, 0.8);
-    letter-spacing: 0.1em;
-    padding-left: 0.1em;
-    text-transform: uppercase;
+  div.left {
+    @include media($breakpoint-xs) {}
+
+    @include media($breakpoint-s) {}
+
+    @include media($breakpoint-m) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-l) {
+      @include span-columns(9);
+    }
+
+    @include media($breakpoint-xl) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-xxl) {
+      @include shift-in-context(1 of $columns-xxl);
+      @include span-columns(5);
+    }
+  }
+
+  div.middle {
+    @include media($breakpoint-xs) {}
+
+    @include media($breakpoint-s) {}
+
+    @include media($breakpoint-m) {
+      @include span-columns(5);
+      @include omega;
+    }
+
+    @include media($breakpoint-l) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-xl) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-xxl) {
+      @include span-columns(6);
+    }
+  }
+
+  div.right {
+    @include media($breakpoint-xs) {}
+
+    @include media($breakpoint-s) {}
+
+    @include media($breakpoint-m) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-l) {
+      @include span-columns(4);
+      @include omega();
+    }
+
+    @include media($breakpoint-xl) {
+      @include span-columns(4);
+      @include omega();
+    }
+
+    @include media($breakpoint-xxl) {
+      @include span-columns(5);
+    }
   }
 }
+
+.state {
+  border-bottom: 1px solid rgba($c-white, 0.1);
+  @include rem(padding-bottom, 1.5);
+  @include rem(margin-bottom, 1.5);
+
+  .value,
+  .name {
+    text-transform: capitalize;
+  }
+
+  .value {
+    @include rem(font-size, 2);
+    @include rem(line-height, 3);
+  }
+
+  .name {
+    color: rgba($c-white, 0.4);
+    @include rem(letter-spacing, 0.1);
+    @include rem(padding-left, 0.1);
+  }
+}
+
+// #device-actions,
+// #service-actions,
+// #device-states,
+// #service-states {
+//   @include media($breakpoint-m) {
+//     @include span-columns(3);
+//   }
+// }
+
+// header {
+//   float: left;
+//   width: 49%;
+
+//   h1 {
+//     @include rem(font-size, 1.6);
+//     @include rem(line-height, 2.4);
+//     @include rem(padding, 0, 2.4);
+//     text-align: left;
+//   }
+// }
+
+// nav {
+//   float: right;
+//   text-align: right;
+//   width: 49%;
+
+//   li {
+//     display: inline-block;
+//   }
+
+//   a {
+//     display: block;
+//     // @include rem(margin, $line-height, 0);
+//     @include rem(padding, 0, 2.4);
+//     text-decoration: none;
+
+//     &.active {
+//       text-decoration: underline;
+//     }
+//   }
+// }
+
+// #content {
+//   clear: both;
+// }
+
+// #device-header {
+//   @include display(flex);
+//   @include justify-content(center);
+//   margin-bottom: 2%;
+//   width: 100%;
+
+//   h2,
+//   p {
+//     text-align: center;
+//   }
+
+//   p {
+//     color: #676767;
+//     @include rem(font-size, 0.8);
+//     letter-spacing: 0.1em;
+//     padding-left: 0.1em;
+//     text-transform: uppercase;
+//   }
+// }
