--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -23,67 +23,97 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-/*
- * Libraries
- *
- */
+// .list {
+//   p {
+//     color: $c-grey;
+//     @include rem(font-size, 1);
+//     letter-spacing: 0.1em;
+//     padding-left: 0.1em;
+//     text-transform: uppercase;
+//   }
+// }
 
-@import "bourbon";
+.list > .item-divider {
+  // border-bottom: 1px solid $c-turquoise;
+  border-bottom: none;
+  color: $c-turquoise;
+  @include rem(height, 3);
+  @include rem(margin, 1.5, 0, 0);
+  @include rem(padding, 0.7, 1.5, 0.8);
+}
 
+.list > .item {
+  background-color: $c-white;
+  border-bottom: 1px solid rgba($c-grey, 0.1);
+  cursor: pointer;
+  display: block;
+  @include rem(height, 4.5);
+  @include rem(padding, 1.5);
+  position: relative;
 
-/*
- * App SASS
- *
- */
+  &:last-child {
+    border-bottom: none;
+  }
 
-@import "../assets/scss/functions";
-@import "../assets/scss/mixins";
-@import "../assets/scss/variables";
+  span {
+    display: inline-block;
+    height: inherit;
+    overflow: hidden;
+    @include rem(padding, 1.5, 4.5, 1.5, 1.5);
+    position: absolute;
+      left: 0;
+      top: 0;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
+  }
 
+  // &:first-child {
+  //   border-top: 1px solid lighten($c-grey, 50%);
+  // }
 
-/*
- * Grid
- *
- */
+  .icon {
+    float: right;
+    @include rem(height, 1.5);
+    // @include rem(margin, 1.4, 1.5, 1.6);
+    @include rem(margin, 1.5);
+    // position: relative;
+    //   @include rem(top, 0.2);
+    position: absolute;
+      right: 0;
+      top: 0;
+    @include rem(width, 1.5);
+  }
+}
 
-@import "../assets/scss/grid/grid";
+.modal {
+  .list > .item {
+    &.selected .icon {
+      fill: $c-turquoise;
+    }
 
+    .icon {
+      // display: none;
+      // fill: lighten($c-grey, 50%);
+      fill: rgba($c-grey, 0.1);
+    }
+  }
 
-/*
- * Reset
- *
- */
+  .list > .item:hover {
+    &.selected .icon {
+      fill: $c-grey;
+    }
 
-@import "../assets/scss/app/reset";
+    .icon {
+      display: block;
+      fill: $c-grey;
+    }
+  }
 
-
-/*
- * Components
- *
- */
-
-@import "../assets/scss/components/button";
-@import "../assets/scss/components/icon";
-@import "../assets/scss/components/list";
-@import "../assets/scss/components/modal";
-@import "../assets/scss/components/tiles";
-
-
-/*
- * Directives (Shared UI)
- */
-
-@import "../app/shared/ui/action-bar/action-bar";
-@import "../app/shared/ui/form/form";
-@import "../app/shared/ui/range/range";
-// @import "../app/shared/ui/tabs/tabs";
-@import "../app/shared/ui/wizard/wizard";
-
-
-/*
- * App specific
- *
- */
-
-@import "../assets/scss/app/base";
-@import "../assets/scss/app/layout";
+  .list > .item:active {
+    .icon {
+      display: block;
+      fill: lighten($c-grey, 50%);
+    }
+  }
+}
