--- a/src/assets/scss/components/_tiles.scss
+++ b/src/assets/scss/components/_tiles.scss
@@ -23,40 +23,46 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tiles {
-  overflow: auto;
-  @include rem(padding, 0, 2.4);
-  width: 100%;
-
-  h2,
-  p {
-    @include rem(height, 2.4);
-    overflow: hidden;  
-    text-align: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    width: 100%;
-  }
-
-  h2 {
-    @include rem(font-size, 1.6);
-    @include rem(line-height, 2.4);
-  }
-
-  p {
-    color: #676767;
-    @include rem(font-size, 1.2);
-    letter-spacing: 0.1em;
-    padding-left: 0.1em;
-    text-transform: uppercase;
-  }
-}
+.tiles {}
 
 .tiles > .item {
-  float: left;
-  margin: 0% 2% 2% 0;
+  background-color: get-color("background");
+  @include rem(margin, 0, 0, 1.5);
   position: relative;
-  width: 23.5%;
+
+  @include media($breakpoint-xs) {
+    @include span-columns(3);
+    @include omega(2n);
+  }
+
+  @include media($breakpoint-s) {
+    @include span-columns(3);
+    @include omega(2n);
+  }
+
+  @include media($breakpoint-m) {
+    @include span-columns(3);
+    @include omega(3n);
+  }
+
+  @include media($breakpoint-l) {
+    @include span-columns(3);
+    @include omega(4n);
+  }
+
+  @include media($breakpoint-xl) {
+    @include span-columns(3);
+    @include omega(4n);
+  }
+
+  @include media($breakpoint-xxl) {
+    @include span-columns(4);
+    @include omega(4n);
+
+    &:nth-child(4n + 1) {
+      @include shift-in-context(1 of $columns-xxl);
+    }
+  }
 
   &:before {
     content: "";
@@ -64,21 +70,102 @@
     padding-top: 100%;
   }
 
-  &:nth-child(4n) {
-    margin-right: 0;
+  &:hover {
+    background-color: rgba($c-white, 0.1);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.05);
   }
 
   a {
-    background-color: #fff;
-    border: 1px solid #eee;
-    color: #000;
     display: block;
     height: 100%;
-    @include rem(padding, 1.8);
+    @include rem(padding, 1.5);
     position: absolute;
       left: 0;
       top: 0;
-    text-decoration: none;
+    width: 100%;
+  }
+
+  h2 {
+    @include rem(font-size, 1);
+    letter-spacing: 0;
+    @include rem(line-height, 1.5);
+    @include rem(margin-top, 1.5);
+    overflow: hidden;
+    text-align: center;
+    text-overflow: ellipsis;
+    text-transform: capitalize;
+    white-space: nowrap;
     width: 100%;
   }
 }
+
+// .tiles {
+//   overflow: auto;
+//   // @include rem(padding, 0, 2.4);
+//   // @include rem(padding, 1);
+//   position: relative;
+//   width: 100%;
+
+//   h2,
+//   p {
+//     // @include rem(height, 2.4);
+//     @include rem(height, 1);
+//     overflow: hidden;
+//     position: absolute;
+//       left: 0;
+//     text-align: center;
+//     text-overflow: ellipsis;
+//     white-space: nowrap;
+//     width: 100%;
+//   }
+
+//   h2 {
+//     @include rem(bottom, 2.5);
+//     // @include rem(bottom, 4.2);
+//     // @include rem(font-size, 1.6);
+//     // @include rem(line-height, 2.4);
+//     @include rem(font-size, 1);
+//   }
+
+//   p {
+//     // @include rem(bottom, 1.8);
+//     @include rem(botton, 1.5);
+//     color: #676767;
+//     // @include rem(font-size, 1.2);
+//     letter-spacing: 0.1em;
+//     padding-left: 0.1em;
+//     text-transform: uppercase;
+//   }
+// }
+
+// .tiles > .item {
+//   float: left;
+//   margin: 0% 2% 2% 0;
+//   position: relative;
+//   width: 23.5%;
+
+//   &:before {
+//     content: "";
+//     display: block;
+//     padding-top: 100%;
+//   }
+
+//   &:nth-child(4n) {
+//     margin-right: 0;
+//   }
+
+//   a {
+//     background-color: #ccc;
+//     border: 1px solid #eee;
+//     color: #000;
+//     display: block;
+//     height: 100%;
+//     // @include rem(padding, 1.8);
+//     @include rem(padding, 1.5);
+//     position: absolute;
+//       left: 0;
+//       top: 0;
+//     text-decoration: none;
+//     width: 100%;
+//   }
+// }
