Added intro page with default functionality and styles.

--- a/src/assets/scss/app/_base.scss
+++ b/src/assets/scss/app/_base.scss
@@ -64,6 +64,14 @@ h2 {
   text-transform: uppercase;
 }
 
+.intro {
+  color: $c-grey;
+
+  a {
+    color: inherit;
+  }
+}
+
 // p,
 // a {
 //   // @include rem(font-size, 1.8);
