--- a/src/app/components/intro/intro.html
+++ b/src/app/components/intro/intro.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML>
-<!-- Doctype has to be firs: http://stackoverflow.com/questions/941100/can-comments-appear-before-the-doctype-declaration -->
-
 <!-- 
   Copyright (C) 2015 Lukas Mayerhofer <lukas.mayerhofer@guh.guru>
   
@@ -23,32 +20,41 @@
   SOFTWARE.
 -->
 
-<html ng-app="guh">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  
-  <title>guh</title>
 
-  <!-- SVG Sprites -->
-  <link rel="stylesheet" href="assets/css/ui/sprite.css">
-  <link rel="stylesheet" href="assets/css/vendor/sprite.css">
+<!-- Logo -->
+<div class="logo">
+  <div class="img">Logo</div>
 
-  <!-- vendor:css -->
-  <!-- endinject -->
+  <!-- <svg class="icon">
+    <use xlink:href="./assets/svg/guh-logo.svg"></use>
+  </svg> -->
 
-  <!-- app:css -->
-  <!-- endinject -->
-</head>
+  <h1>guh</h1>
+  <p>gear up your home</p>
 
-<body guh-toggle-grid="hide">
-  <div ng-class="{ intro: app.$state.is('guh.intro') }" id="main" ui-view></div>
+  <p ng-show="intro.check">Checking connection...</p>
+</div>
 
-  <!-- vendor:js -->
-  <!-- endinject -->
+<!-- Setup -->
+<div class="form-container" ng-show="intro.setup">
+  <p>Please enter the host address of your guh system.</p>
 
-  <!-- app:js -->
-  <!-- endinject -->
-</body>
-</html>
+  <form name="setHostAddress" ng-submit="intro.setHostAddress()" novalidate>  
+    <label>IP</label>
+    <input name="test"
+           type="text"
+           ng-model="intro.hostAddress"
+           ng-change="intro.checkHostAddress()"
+           ng-required="true" />
+
+    <div ng-messages="setHostAddress.$error" ng-if="setHostAddress.$dirty">
+      <p ng-message="required">Field is required.</p>
+    </div>
+
+    <button type="button" ng-click="intro.resetHostAddress()">Reset</button>
+    <button type="submit">Save</button>
+  </form>
+</div>
+
+<!-- Loading -->
+<p ng-show="intro.load">Loading data...</p>
