--- a/src/app/shared/ui/form/form.scss
+++ b/src/app/shared/ui/form/form.scss
@@ -102,7 +102,8 @@ input[type="checkbox"] {
   display: none;
 }
 
-.modal {
+.modal,
+.intro {
   input[type="email"],
   input[type="text"] {
     border-bottom: 1px solid rgba($c-grey, 0.1);
