Added guh logo to intro page.

--- a/src/app/components/intro/intro.html
+++ b/src/app/components/intro/intro.html
@@ -23,14 +23,7 @@
 
 <!-- Logo -->
 <div class="logo">
-  <div class="img">Logo</div>
-
-  <!-- <svg class="icon">
-    <use xlink:href="./assets/svg/guh-logo.svg"></use>
-  </svg> -->
-
-  <h1>guh</h1>
-  <p>gear up your home</p>
+  <img src="./assets/svg/guh-logo.svg" alt="Logo of guh showing a green owl with following text: guh - gear up your home">
 
   <p ng-show="intro.check">Checking connection...</p>
 </div>
