--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -23,6 +23,115 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
+#main.intro {
+  @include rem(padding, 1.5);
+  position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+
+  header.app,
+  nav.app {
+    display: none;
+  }
+
+  .content {
+    background-color: $c-white;
+    height: 100%;
+  }
+}
+
 .intro {
-  
+  &> p {
+    @include rem(padding, 1.5);
+    text-align: center;
+  }
+
+  .logo {
+    margin: 0 auto;
+    @include rem(padding, 6, 0, 3);
+    // text-align: center;
+
+    @include media($breakpoint-xs) {
+      // @include shift-in-context(1 of $columns-s);
+      // @include span-columns(4);
+      width: 220px;
+    }
+
+    @include media($breakpoint-s) {
+      // @include shift-in-context(1 of $columns-s);
+      // @include span-columns(4);
+      width: 240px;
+    }
+
+    @include media($breakpoint-m) {
+      // @include shift-in-context(2 of $columns-m);
+      // @include span-columns(5);
+      width: 260px;
+    }
+
+    @include media($breakpoint-l) {
+      // @include shift-in-context(3 of $columns-l);
+      // @include span-columns(6);
+      width: 280px;
+    }
+
+    @include media($breakpoint-xl) {
+      // @include shift-in-context(3 of $columns-xl);
+      // @include span-columns(6);
+      width: 280px;
+    }
+
+    @include media($breakpoint-xxl) {
+      // @include shift-in-context(6 of $columns-xxl);
+      // @include span-columns(6);
+      width: 280px;
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .form-container {
+    clear: left;
+    @include rem(margin-top, 3);
+
+    @include media($breakpoint-xs) {}
+
+    @include media($breakpoint-s) {
+      @include shift-in-context(1 of $columns-s);
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-m) {
+      @include shift-in-context(2 of $columns-m);
+      @include span-columns(5);
+    }
+
+    @include media($breakpoint-l) {
+      @include shift-in-context(3 of $columns-l);
+      @include span-columns(6);
+    }
+
+    @include media($breakpoint-xl) {
+      @include shift-in-context(3 of $columns-xl);
+      @include span-columns(6);
+    }
+
+    @include media($breakpoint-xxl) {
+      @include shift-in-context(6 of $columns-xxl);
+      @include span-columns(6);
+    }
+
+    p {
+      @include rem(padding, 0, 1.5);
+    }
+
+    button {
+      float: left;
+      width: 50%;
+    }
+  }
 }
