Added localStorage to permanently save host address.

--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -43,8 +43,8 @@
 }
 
 .intro {
-  &> p {
-    @include rem(padding, 1.5);
+  &> .content p {
+    @include rem(padding, 6, 1.5, 3);
     text-align: center;
   }
 
