Unified structure of edit modals.

--- a/src/app/components/moods/edit/edit-mood-modal.html
+++ b/src/app/components/moods/edit/edit-mood-modal.html
@@ -21,5 +21,13 @@
 -->
 
 
-<h3>Edit</h3>
-<button ng-click="editMood.remove()">Remove</button>
+<div class="inner-content">
+  <button class="close" ng-click="closeThisDialog()">
+    <svg class="icon">
+      <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
+    </svg>
+  </button>
+
+  <h3>Edit {{ editMood.rule.name }}</h3>
+  <button ng-click="editMood.remove()">Remove</button>
+</div>
