--- a/src/assets/scss/shared/_modal.scss
+++ b/src/assets/scss/shared/_modal.scss
@@ -92,19 +92,25 @@
     }
 
     .inner-content {
-      @include rem(padding, 1.5);
+      @include rem(padding, 7.5, 1.5, 1.5);
       position: relative;
-    }
 
-    // h3 {
-    //   @include rem(font-size, 1);
-    //   @include rem(letter-spacing, 0.1);
-    //   @include rem(line-height, 1.5);
-    //   @include rem(margin, 0, 0, 1.5);
-    //   @include rem(padding, 1.5, 4.5);
-    //   text-align: center;
-    //   text-transform: uppercase;
-    // }
+      h3 {
+        @include background(linear-gradient($c-white, rgba($c-white, 0.9)));
+        @include rem(font-size, 1);
+        @include rem(height, 7.5);
+        @include rem(letter-spacing, 0.1);
+        @include rem(line-height, 1.5);
+        @include rem(padding, 3, 6);
+        position: absolute;
+          left: 0;
+          top: 0;
+        text-align: center;
+        text-transform: uppercase;
+        width: 100%;
+        z-index: 1;
+      }
+    }
 
     button,
     .button {
